postcss/testData/inspections/customMedia/incorrectCustomMediaName.pcss
@custom-media <error descr="Custom media name should start with '--'">-my</error> all and (height >= 100px);